--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteClases/index.xhtml
@@ -59,16 +59,16 @@
                             #{clase.tema}
                         </p:column>
                         <p:column headerText="Tipo" >
-                            #{clase.tipoClase}
+                            #{clase.tipo}
                         </p:column>
                         <p:column headerText="Hora" >
-                            #{clase.hora}
+                            #{clase.horatext}
                         </p:column>
                         <p:column headerText="Horario" >
                             #{clase.horario}
                         </p:column>
                         <p:column headerText="Estado" >
-                            #{clase.estadoClase}
+                            #{clase.estado}
                         </p:column>
 
 
