--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpClases.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpClases.jrxml
@@ -175,7 +175,7 @@ Reporte de Clases]]></text>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Left"/>
 				<textFieldExpression><![CDATA[$F{tipo}]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -245,7 +245,7 @@ Reporte de Clases]]></text>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["TOTAL DE USUARIOS: "+ $V{REPORT_COUNT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["TOTAL DE CLASES: "+ $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
