--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/crear.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Matriculas" url="#{siteUrls.gestionAnioEscolar}"/>
+            <p:menuitem value="Matricula de Alumnos" url="#{siteUrls.gestionAnioEscolar}"/>
             <p:menuitem value="Nuevo Matricula"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
