--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
@@ -8,8 +8,8 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
-            <p:menuitem value="Modificar Expedientes"></p:menuitem>
+            <p:menuitem value="Matricula de Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
+            <p:menuitem value="Modificar Matricula"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda#{gestionarAlumnosController.indexMenu}').show();"></i>
