--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Matriculas" url="#{siteUrls.gestionAnioEscolar}"/>
+            <p:menuitem value="Matricula de Alumnos" url="#{siteUrls.gestionAnioEscolar}"/>
             <p:menuitem value="Consulta de Matriculas"/>
             <p:separator />
         </p:breadCrumb>
