correciones de fecha y hora en bitacora

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/bitacora.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/bitacora.xhtml
@@ -42,7 +42,7 @@
                     </p:column>
                     <p:column headerText="Hora" >
                         <p:outputLabel value="#{car.hora}">
-                            <f:convertDateTime pattern="hh:mm a" ></f:convertDateTime>
+                            <f:convertDateTime pattern="h:mm a" ></f:convertDateTime>
                         </p:outputLabel>
                     </p:column>
                     <p:column headerText="Fuente de datos" >
