correcion en bitacora

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/bitacora.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/bitacora.xhtml
@@ -49,7 +49,7 @@
                         #{car.fuente}
                     </p:column>
                     <p:column headerText="Responsable" >
-                        
+                        #{car.responsable}
                     </p:column>
                     <f:facet name="footer">
                         Total de Registros #{bitacoraController.totalTransacciones}
